--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 <body>
   <div class="background">
     <header>
-        <a id="logo-ref" href="#"><img id="logo" src="https://cdn-icons.flaticon.com/png/512/3200/premium/3200013.png?token=exp=1639349840~hmac=f357d130b4847c5b3abe66e99f041d5f"  alt="Логотип"></a>
+        <a id="logo-ref" href="#"><img id="logo" src="logo.png"  alt="Логотип"></a>
         <nav>
             <a href="index.html">Описание</a>
             <a href="index1.html">Живопись</a>
